--- a/Calculator/Calculator.Droid/Properties/AndroidManifest.xml
+++ b/Calculator/Calculator.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Calculator.Droid" android:versionCode="1" android:versionName="1.0">
-	<uses-sdk />
-	<application android:label="Calculator.Droid" android:icon="@drawable/Icon"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="cz.deedx.Calculator.Droid" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="23" />
+	<application android:icon="@drawable/icon" android:label="Calculator.Droid"></application>
 </manifest>
